@@ -20,6 +20,8 @@ Broker:
   unexpected behaviour if you were using topics of this form.
 - Log when outgoing messages for a client begin to drop off the end of the
   queue.
+- Bridge clients are recognised as bridges even after reloading from
+  persistence.
 
 Client library:
 - Fix support for Python 2.6, 3.0, 3.1.
